--- a/about as.html
+++ b/about as.html
@@ -38,11 +38,11 @@
             </div>
         </div>
     </div>
-</div><h1>О нас</h1>
 
+</div><h1 text-align="center">Добро пожаловать в ресторан Вкуснов!</h1>
   <div class="con">
             
-            <p >Добро пожаловать в ресторан Pestoran! Мы являемся семейным рестораном, специализирующимся на предоставлении высококачественной еды и незабываемых впечатлений нашим гостям.
+            <p > Мы являемся семейным рестораном, специализирующимся на предоставлении высококачественной еды и незабываемых впечатлений нашим гостям.
            У нас в ресторане мы стремимся создать уютную и гостеприимную атмосферу, где каждый гость может насладиться вкусными блюдами и отличным сервисом. Наше меню разнообразно и включает в себя блюда различных кухонь мира, от классических итальянских паст и пиццы до сочных стейков и свежих морепродуктов.
             Мы гордимся тем, что используем только свежие и качественные ингредиенты, чтобы предложить нашим гостям блюда высочайшего качества. Наша команда опытных и талантливых поваров готовит каждое блюдо с любовью и старательностью, чтобы удовлетворить самый изысканный вкус.
            Мы также предлагаем широкий выбор напитков, включая коктейли, вина и безалкогольные напитки, чтобы полностью насладиться вашим обедом или ужином.
@@ -60,5 +60,6 @@
   <div class='footer'>
     <p> "Наслаждайтесь кулинарным искусством в ресторане "BKYCHOB" - Где гастрономия встречается с блаженством!"</p>
  </div>
+ <script src='app.js'></script>
 </body>
 </html>
