--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ресторан</title>
+    <style>
+        .header-suptitle {
+            font-size: 30px;
+            font-weight:bolder;
+        }
+    </style>
 </head>
 <body>
 
@@ -66,7 +72,7 @@
                 </div>
 
                 <div class='header-suptitle'>
-                    ДОМ ЛУЧШЕЙ ЕДЫ
+                   "Вкуснов"
                 </div>
 
               
@@ -129,7 +135,7 @@
                 </div>
 
                 <div class='card-desc'>
-                    Стоимость нашей Едызависит только от ее количества. Качество всегда на высоте!
+                    Стоимость нашей Еды зависит только от ее количества. Качество всегда на высоте!
                 </div>
 
             </div>
@@ -243,7 +249,7 @@
         </div>
 
         <div class='coment-name'>
-            Николай
+            Николя
         </div>
 
     </div>
